// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can replace a color value 1`] = `
Object {
  "children": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "lang": "js",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"js\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk12\\">x</span><span class=\\"mtk1\\"> = </span><span class=\\"mtk7\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}

.default-dark.mtk1 { color: var(--color-D4D4D4); }
.default-dark.mtk2 { color: var(--color-1E1E1E); }
.default-dark.mtk3 { color: var(--color-6A9955); }
.default-dark.mtk4 { color: var(--color-569CD6); }
.default-dark.mtk5 { color: var(--color-D16969); }
.default-dark.mtk6 { color: var(--color-D7BA7D); }
.default-dark.mtk7 { color: var(--color-B5CEA8); }
.default-dark.mtk8 { color: var(--color-CE9178); }
.default-dark.mtk9 { color: var(--color-646695); }
.default-dark.mtk10 { color: var(--color-4EC9B0); }
.default-dark.mtk11 { color: var(--color-DCDCAA); }
.default-dark.mtk12 { color: var(--color-9CDCFE); }
.default-dark.mtk13 { color: var(--color-000080); }
.default-dark.mtk14 { color: var(--color-F44747); }
.default-dark.mtk15 { color: var(--color-C586C0); }
.default-dark.mtk16 { color: var(--color-6796E6); }
.default-dark.mtk17 { color: var(--color-808080); }
.default-dark.mtki { font-style: italic; }
.default-dark.mtkb { font-weight: bold; }
.default-dark.mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
}
`;

exports[`extension downloading can download an extension to resolve a grammar 1`] = `
Object {
  "children": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "lang": "custom",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"custom\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk1\\">const x = 3;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk1\\">// Comment</span></span></code></pre>",
    },
    Object {
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}

.default-dark.mtk1 { color: #D4D4D4; }
.default-dark.mtk2 { color: #1E1E1E; }
.default-dark.mtk3 { color: #6A9955; }
.default-dark.mtk4 { color: #569CD6; }
.default-dark.mtk5 { color: #D16969; }
.default-dark.mtk6 { color: #D7BA7D; }
.default-dark.mtk7 { color: #B5CEA8; }
.default-dark.mtk8 { color: #CE9178; }
.default-dark.mtk9 { color: #646695; }
.default-dark.mtk10 { color: #4EC9B0; }
.default-dark.mtk11 { color: #DCDCAA; }
.default-dark.mtk12 { color: #9CDCFE; }
.default-dark.mtk13 { color: #000080; }
.default-dark.mtk14 { color: #F44747; }
.default-dark.mtk15 { color: #C586C0; }
.default-dark.mtk16 { color: #6796E6; }
.default-dark.mtk17 { color: #808080; }
.default-dark.mtki { font-style: italic; }
.default-dark.mtkb { font-weight: bold; }
.default-dark.mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
}
`;

exports[`extension downloading can download an extension to resolve a theme 1`] = `
Object {
  "children": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "lang": "js",
      "type": "html",
      "value": "<pre class=\\"custom-theme vscode-highlight\\" data-language=\\"js\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> x </span><span class=\\"mtk11\\">=</span><span class=\\"mtk1\\"> </span><span class=\\"mtk5\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.custom-theme {

}

.custom-theme.mtk1 { color: #000000; }
.custom-theme.mtk2 { color: #FFFFFF; }
.custom-theme.mtk3 { color: #6A9955; }
.custom-theme.mtk4 { color: #569CD6; }
.custom-theme.mtk5 { color: #B5CEA8; }
.custom-theme.mtk6 { color: #646695; }
.custom-theme.mtk7 { color: #D7BA7D; }
.custom-theme.mtk8 { color: #9CDCFE; }
.custom-theme.mtk9 { color: #000080; }
.custom-theme.mtk10 { color: #F44747; }
.custom-theme.mtk11 { color: #D4D4D4; }
.custom-theme.mtk12 { color: #CE9178; }
.custom-theme.mtk13 { color: #6796E6; }
.custom-theme.mtk14 { color: #808080; }
.custom-theme.mtk15 { color: #D16969; }
.custom-theme.mtki { font-style: italic; }
.custom-theme.mtkb { font-weight: bold; }
.custom-theme.mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
}
`;

exports[`included languages and themes can use a custom language alias 1`] = `
Object {
  "children": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "lang": "java-scripty",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"java-scripty\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk12\\">x</span><span class=\\"mtk1\\"> = </span><span class=\\"mtk7\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}

.default-dark.mtk1 { color: #D4D4D4; }
.default-dark.mtk2 { color: #1E1E1E; }
.default-dark.mtk3 { color: #6A9955; }
.default-dark.mtk4 { color: #569CD6; }
.default-dark.mtk5 { color: #D16969; }
.default-dark.mtk6 { color: #D7BA7D; }
.default-dark.mtk7 { color: #B5CEA8; }
.default-dark.mtk8 { color: #CE9178; }
.default-dark.mtk9 { color: #646695; }
.default-dark.mtk10 { color: #4EC9B0; }
.default-dark.mtk11 { color: #DCDCAA; }
.default-dark.mtk12 { color: #9CDCFE; }
.default-dark.mtk13 { color: #000080; }
.default-dark.mtk14 { color: #F44747; }
.default-dark.mtk15 { color: #C586C0; }
.default-dark.mtk16 { color: #6796E6; }
.default-dark.mtk17 { color: #808080; }
.default-dark.mtki { font-style: italic; }
.default-dark.mtkb { font-weight: bold; }
.default-dark.mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
}
`;

exports[`included languages and themes can use a standard language alias 1`] = `
Object {
  "children": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "lang": "JavaScript",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"javascript\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk12\\">x</span><span class=\\"mtk1\\"> = </span><span class=\\"mtk7\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}

.default-dark.mtk1 { color: #D4D4D4; }
.default-dark.mtk2 { color: #1E1E1E; }
.default-dark.mtk3 { color: #6A9955; }
.default-dark.mtk4 { color: #569CD6; }
.default-dark.mtk5 { color: #D16969; }
.default-dark.mtk6 { color: #D7BA7D; }
.default-dark.mtk7 { color: #B5CEA8; }
.default-dark.mtk8 { color: #CE9178; }
.default-dark.mtk9 { color: #646695; }
.default-dark.mtk10 { color: #4EC9B0; }
.default-dark.mtk11 { color: #DCDCAA; }
.default-dark.mtk12 { color: #9CDCFE; }
.default-dark.mtk13 { color: #000080; }
.default-dark.mtk14 { color: #F44747; }
.default-dark.mtk15 { color: #C586C0; }
.default-dark.mtk16 { color: #6796E6; }
.default-dark.mtk17 { color: #808080; }
.default-dark.mtki { font-style: italic; }
.default-dark.mtkb { font-weight: bold; }
.default-dark.mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
}
`;

exports[`included languages and themes works with default options 1`] = `
Object {
  "children": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "lang": "js",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"js\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk12\\">x</span><span class=\\"mtk1\\"> = </span><span class=\\"mtk7\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}

.default-dark.mtk1 { color: #D4D4D4; }
.default-dark.mtk2 { color: #1E1E1E; }
.default-dark.mtk3 { color: #6A9955; }
.default-dark.mtk4 { color: #569CD6; }
.default-dark.mtk5 { color: #D16969; }
.default-dark.mtk6 { color: #D7BA7D; }
.default-dark.mtk7 { color: #B5CEA8; }
.default-dark.mtk8 { color: #CE9178; }
.default-dark.mtk9 { color: #646695; }
.default-dark.mtk10 { color: #4EC9B0; }
.default-dark.mtk11 { color: #DCDCAA; }
.default-dark.mtk12 { color: #9CDCFE; }
.default-dark.mtk13 { color: #000080; }
.default-dark.mtk14 { color: #F44747; }
.default-dark.mtk15 { color: #C586C0; }
.default-dark.mtk16 { color: #6796E6; }
.default-dark.mtk17 { color: #808080; }
.default-dark.mtki { font-style: italic; }
.default-dark.mtkb { font-weight: bold; }
.default-dark.mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
}
`;

exports[`included languages and themes works without highlighting if a code fence has no language 1`] = `
Object {
  "children": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "lang": "",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\">const x = 3;</span>
<span class=\\"vscode-highlight-line\\">// Comment</span></code></pre>",
    },
    Object {
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}</style>",
    },
  ],
}
`;

exports[`included languages and themes works without highlighting if language is not recognized 1`] = `
Object {
  "children": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "lang": "none",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"none\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\">const x = 3;</span>
<span class=\\"vscode-highlight-line\\">// Comment</span></code></pre>",
    },
    Object {
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}</style>",
    },
  ],
}
`;

exports[`sets highlighted line class names 1`] = `
Object {
  "children": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "lang": "js{1,3-4}",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"js\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line vscode-highlight-line-highlighted\\"><span class=\\"mtk3\\">// 1</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3\\">// 2</span></span>
<span class=\\"vscode-highlight-line vscode-highlight-line-highlighted\\"><span class=\\"mtk3\\">// 3</span></span>
<span class=\\"vscode-highlight-line vscode-highlight-line-highlighted\\"><span class=\\"mtk3\\">// 4</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3\\">// 5</span></span></code></pre>",
    },
    Object {
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}

.default-dark.mtk1 { color: #D4D4D4; }
.default-dark.mtk2 { color: #1E1E1E; }
.default-dark.mtk3 { color: #6A9955; }
.default-dark.mtk4 { color: #569CD6; }
.default-dark.mtk5 { color: #D16969; }
.default-dark.mtk6 { color: #D7BA7D; }
.default-dark.mtk7 { color: #B5CEA8; }
.default-dark.mtk8 { color: #CE9178; }
.default-dark.mtk9 { color: #646695; }
.default-dark.mtk10 { color: #4EC9B0; }
.default-dark.mtk11 { color: #DCDCAA; }
.default-dark.mtk12 { color: #9CDCFE; }
.default-dark.mtk13 { color: #000080; }
.default-dark.mtk14 { color: #F44747; }
.default-dark.mtk15 { color: #C586C0; }
.default-dark.mtk16 { color: #6796E6; }
.default-dark.mtk17 { color: #808080; }
.default-dark.mtki { font-style: italic; }
.default-dark.mtkb { font-weight: bold; }
.default-dark.mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
}
`;
